fix: minor UI layout issues (#2270)

--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -83,5 +83,5 @@ body:global(.expanded) {
 .actions {
   position: absolute;
   right: 14px;
-  top: 0;
+  top: 4px;
 }
